[[changelog-1.7]]
=== 1.7

==== Improvements

* When `asJson()` is called on `ProxyDataSourceBuilder`, slow listeners also write the output
  as json. (https://github.com/ttddyy/datasource-proxy/pull/66[Issue-66])